# Matrix-Vector-Operations

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: FetchDependencies.cmake  MVOpConfig.cmake.in
examples/: CMakeLists.txt  example0.cpp
lib/: CMakeLists.txt
lib/include/: matrix.hpp  matrix_vector_op.hpp  types.hpp  vector.hpp
lib/include/matrix/: matrix.hpp  matrix_image.hpp
lib/include/vector/: vector.hpp  vector_dsp.hpp  vector_generic.hpp  vectore_dsp.hpp  vectore_generic.hpp
lib/source/: global.cu  matrix_vector_op.cu  types.cu
lib/source/matrix/: Matrix.cu  Matrix_Conv.cu  Matrix_Dot.cu
lib/source/vector/: Vector.cpp  Vector.cu  Vector_Add.cu  Vector_Conv.cu  Vector_Stat.cu  Vector_Sum.cu
tests/: CMakeLists.txt
tests/reference/: CMakeLists.txt
tests/reference/include/: ref_matrix.hpp  ref_vector.hpp  reference.hpp
tests/reference/source/: ref_matrix.cpp
tests/reference/source/matrix/: ref_matrix.cpp  ref_matrix_image.cpp  ref_matrix_op.cpp
tests/reference/source/vector/: ref_vector.cpp  ref_vector_dsp.cpp  ref_vector_op.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/include/: print_types.hpp  test_helper.hpp
tests/unit_tests/source/: Test_Vector_Add.cpp
tests/unit_tests/source/matrix/: Test_Matrix_Conv.cpp  Test_Matrix_Dot.cpp
tests/unit_tests/source/vector/: Test_Vector_Add.cpp  Test_Vector_Conv.cpp  Test_Vector_Mean.cpp  Test_Vector_Sum.cpp
